cleaning up code - horizontal scroll is bugging on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,10 +43,6 @@ body { /*default styles*/
     padding: 0;
 }
 
-.wrapper{
-  overflow-x: hidden;
-}
-
 .main-container{
   margin: 100px auto;
   width: 70vw;
@@ -209,7 +205,6 @@ h1 {
 @media only screen and (max-width: 768px) {
   body {
     font-size: 12px;
-    overflow-x: hidden;
   }
   .main-container{
     margin: 0 6vw;
@@ -300,7 +295,6 @@ h1 {
   background: radial-gradient(farthest-side at center, var(--black) 20%, rgba(255, 255, 255, 0) 100%);
   margin-left: -40vw;
   margin-top: -200px;
-  overflow-x: hidden;
   position: absolute;
   width: 200vw;
   z-index: -1;
@@ -309,7 +303,6 @@ h1 {
   background: radial-gradient(farthest-side at center, var(--black) 20%, rgba(255, 255, 255, 0) 100%);
   margin-left: -30vw;
   margin-top: -300px;
-  overflow-x: hidden;
   position: absolute;
   width: 140vw;
   z-index: -1;
@@ -319,7 +312,6 @@ h1 {
   margin-left: 40vw;
   margin-top: 100px;
   opacity: 40%;
-  overflow-x: hidden;
   position: absolute;
   height: 800px;
   width: 120vw;
@@ -330,7 +322,6 @@ h1 {
   background: radial-gradient(farthest-side at center, var(--brown) 20%, rgba(255, 8, 8, 0) 100%);
   margin-left: 0vw;
   margin-top: -400px;
-  overflow-x: hidden;
   position: absolute;
   height: 800px;
   width: 150vw;
